--- a/document.html
+++ b/document.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
+  
   <head>
+    <meta></meta>
+    <title></title>
+    <link href="/styles/style.css" rel="stylesheet">
+    <script src=""></script>
   </head>
   
-  <body>
+  <body onload>
+    <div><section></section></div>
+    <form><fieldset>//
+    <input type>
+    <button type="button" onmouseover="alert()">
   </body>
 </html>
